--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-  "python": "python app.py"
+    "start":"python app.py",
+    "python": "python app.py"
   },
   "dependencies": {
     "child_process": "^1.0.2"
